--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
-    "compilerOptions": {
-        "target": "esnext"
-    }
+  "compilerOptions": {
+    "target": "esnext",
+    "allowJs": true,
+    "checkJs": true
+  }
 }
