--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "module": "ESNext",
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "strict": true
   }
 }
