feat: buttons for happymh

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "None",
+    "module": "Preserve",
     "strict": true,
     "outDir": "out"
   },
