chore: update name for eruda script

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,8 @@
         "noForEach": "off"
       },
       "suspicious": {
-        "noRedundantUseStrict": "off"
+        "noRedundantUseStrict": "off",
+        "noExplicitAny": "info"
       }
     }
   },
