--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsc -w -p .",
-    "build": "npm run gen && tsc -p .",
+    "build": "tsx scripts/buildAll.ts",
     "gen": "node ./scripts/gen-readme.js"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
+    "@types/node": "^24.10.1",
     "eruda": "^3.4.3",
+    "tsdown": "^0.16.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
