--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eruda": "^3.4.3",
     "tsdown": "^0.16.5",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "yocto-spinner": "^1.0.0"
   }
 }
