--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": [
-      "src/**",
-      "scripts/**"
-    ]
+    "includes": ["src/**", "scripts/**"]
   },
   "formatter": {
     "enabled": true,
