--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
     "@types/node": "^24.10.1",
+    "@types/tampermonkey": "^5.0.5",
     "eruda": "^3.4.3",
     "tsdown": "^0.16.5",
     "tsx": "^4.20.6",
