--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,11 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["src/**", "scripts/**"]
+    "includes": [
+      "src/**",
+      "scripts/**",
+      "types/**"
+    ]
   },
   "formatter": {
     "enabled": true,
