--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
+    "@oxc-project/types": "^0.99.0",
     "@types/node": "^24.10.1",
     "@types/tampermonkey": "^5.0.5",
     "eruda": "^3.4.3",
+    "esrap": "^2.2.0",
+    "rolldown": "1.0.0-beta.52",
     "tsdown": "^0.16.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
