--- a/package.json
+++ b/package.json
@@ -8,19 +8,29 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx scripts/dev.ts",
-    "build": "tsx scripts/buildAll.ts"
+    "build": "tsx scripts/buildAll.ts",
+    "release": "tsx scripts/release.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
     "@oxc-project/types": "^0.99.0",
     "@types/node": "^24.10.1",
+    "@types/prompts": "^2.4.9",
+    "@types/semver": "^7.7.1",
     "@types/tampermonkey": "^5.0.5",
     "eruda": "^3.4.3",
     "esrap": "^2.2.0",
+    "oxc-parser": "^0.99.0",
+    "prompts": "^2.4.2",
     "rolldown": "1.0.0-beta.52",
+    "semver": "^7.7.3",
     "tsdown": "^0.16.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "yocto-spinner": "^1.0.0"
+    "yocto-spinner": "^1.0.0",
+    "yoctocolors": "^2.1.2"
+  },
+  "dependencies": {
+    "@0x-jerry/utils": "^6.0.0"
   }
 }
