--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "release": "tsx scripts/release.ts"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.6",
-    "@oxc-project/types": "^0.99.0",
-    "@types/node": "^24.10.1",
+    "@biomejs/biome": "^2.3.11",
+    "@oxc-project/types": "^0.110.0",
+    "@types/node": "^25.0.9",
     "@types/prompts": "^2.4.9",
     "@types/semver": "^7.7.1",
     "@types/tampermonkey": "^5.0.5",
     "eruda": "^3.4.3",
-    "esrap": "^2.2.0",
-    "oxc-parser": "^0.99.0",
+    "esrap": "^2.2.1",
+    "oxc-parser": "^0.110.0",
     "prompts": "^2.4.2",
-    "rolldown": "1.0.0-beta.52",
+    "rolldown": "1.0.0-beta.60",
     "semver": "^7.7.3",
-    "tsdown": "^0.16.5",
-    "tsx": "^4.20.6",
+    "tsdown": "0.20.0-beta.3",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "yocto-spinner": "^1.0.0",
     "yoctocolors": "^2.1.2"
